--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko-KR">
   <head>
-    <title>Vite - Tailwindcss</title>
+    <title>jandi-market</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
@@ -9,9 +9,6 @@
     <script type="module" src="/main.js"></script>
   </head>
   <body>
-    <div id="app" class="bg-blue-500">
-      hi tailwind!
-    </div>
-    
+    <div id="app" class="bg-blue-500">hi tailwind!</div>
   </body>
 </html>
