[🎨Modify]: html에 og:title, tailwind.config에 색상, 폰트
- index.html에 og:title 추가
- tailwind.config 파일에 colors, fontSize 추가

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="ko-KR">
   <head>
-    <title>jandi-market</title>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/src/styles/tailwind.css" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/main.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <title>잔디 - 잔디마켓</title>
+
+    <meta name="description" content="페이지 설명" />
+    <meta name="keywords" content="키워드1,키워드2" />
+    <meta name="author" content="페이지 저자" />
+
+    <meta property="og:title" content="웹페이지 제목" />
+    <meta property="og:description" content="웹페이지 설명" />
+    <meta property="og:image" content="이미지 URL" />
+    <meta property="og:url" content="웹페이지 URL" />
+    <meta property="og:type" content="웹페이지 타입" />
   </head>
-  <body>
-    <div id="app" class="bg-blue-500">hi tailwind!</div>
-  </body>
+  <body></body>
 </html>
