[🎨Modify]: tailwind.css 코드 추가
- HTML에 tailwind.css 연결

--- a/template.html
+++ b/template.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="이미지 URL" />
     <meta property="og:url" content="웹페이지 URL" />
     <meta property="og:type" content="웹페이지 타입" />
+    <link rel="stylesheet" href="/src/styles/tailwind.css" />
   </head>
   <body></body>
 </html>
