--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <meta property="og:image" content="이미지 URL" />
     <meta property="og:url" content="웹페이지 URL" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
   </head>
   <body>
     <footer></footer>
