[🎨Modify]: template.html 수정
template.html 수정, 파비콘 추가

--- a/template.html
+++ b/template.html
@@ -7,16 +7,36 @@
 
     <title>잔디 - 잔디마켓</title>
 
-    <meta name="description" content="페이지 설명" />
-    <meta name="keywords" content="키워드1,키워드2" />
-    <meta name="author" content="페이지 저자" />
+    <meta
+      name="description"
+      content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
+    />
+    <meta
+      name="keywords"
+      content="다이어트, 식단, 닭가슴살, 요리, 치아바타, 레시피, 상차림, 다이어트음식, 이유식, 건강이유식, 뷰티, 화장품"
+    />
+    <meta name="author" content="F4" />
 
-    <meta property="og:title" content="웹페이지 제목" />
-    <meta property="og:description" content="웹페이지 설명" />
-    <meta property="og:image" content="이미지 URL" />
-    <meta property="og:url" content="웹페이지 URL" />
-    <meta property="og:type" content="웹페이지 타입" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="잔디 - 잔디마켓/뷰티잔디" />
+    <meta property="og:title" content="잔디 - 잔디마켓/뷰티잔디" />
+    <meta
+      property="og:description"
+      content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
+    />
+
+    <!-- <meta property="og:image" content="이미지 URL" /> -->
+    <!-- <meta property="og:url" content="웹페이지 URL" /> -->
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body></body>
+  <body>
+    <footer></footer>
+  </body>
 </html>
