--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko-KR">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
@@ -16,6 +17,13 @@
     <meta property="og:image" content="이미지 URL" />
     <meta property="og:url" content="웹페이지 URL" />
     <meta property="og:type" content="웹페이지 타입" />
+    <link rel="stylesheet" href="/src/styles/tailwind.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="w-100pxr h-7">
+      <svg role="img" width="30" height="30" viewBox="0 0 81 81">
+        <use href="./public/icon/_sprite.svg#Wine" />
+      </svg>
+    </div>
+  </body>
 </html>
