[📑Docs]: 이미지 추가 및 삭제
- svg 확장자 이미지 spite 변환 후 삭제
- 상태 변화 필요한 이미지 개별 저장

--- a/index.html
+++ b/index.html
@@ -19,11 +19,5 @@
     <meta property="og:type" content="웹페이지 타입" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
   </head>
-  <body>
-    <div class="w-100pxr h-7">
-      <svg role="img" width="30" height="30" viewBox="0 0 81 81">
-        <use href="./public/icon/_sprite.svg#Wine" />
-      </svg>
-    </div>
-  </body>
+  <body></body>
 </html>
