--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta property="og:url" content="웹페이지 URL" />
     <meta property="og:type" content="웹페이지 타입" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
+    <script type="module" src="./include.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header id="header"></header>
+  </body>
 </html>
