--- a/index.html
+++ b/index.html
@@ -29,14 +29,31 @@
     <!-- <meta property="og:url" content="웹페이지 URL" /> -->
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
-      rel="stylesheet"
+      rel="preload"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script src="./main.js" type="module"></script>
   </head>
   <body>
-    <footer></footer>
+    <!-- Slider main container -->
+    <div class="swiper w-800pxr h-500pxr">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        ...
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
   </body>
 </html>
