--- a/template.html
+++ b/template.html
@@ -36,7 +36,5 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body>
-    <footer></footer>
-  </body>
+  <body></body>
 </html>
