[🎨Modify]: 상품설명부분 마크업 및 스타일링
- 가상 이미지로 기본 구조만 잡아놓았습니다.

--- a/src/pages/productDetail/productDetail.html
+++ b/src/pages/productDetail/productDetail.html
@@ -238,6 +238,48 @@
         class="w-[1050px] mt-0 mx-auto flex flex-col gap-24 mb-24"
       >
         <h2 class="sr-only">상품설명</h2>
+        <div>
+          <img
+            src="https://via.placeholder.com/1050x670"
+            alt="상품 디테일 이미지"
+          />
+
+          <!-- context -->
+          <div class="pt-76pxr pb-9 text-center">
+            <p class="text-label-xl font-semibold">
+              튀기지 않아 부담 없는 매콤함
+            </p>
+            <h3 class="text-heading-xxxl font-bold leading-[140%]">
+              [풀무원] 탱탱쫄면
+            </h3>
+          </div>
+          <p
+            class="pt-7 flex items-start self-stretch border-t border-t-gray-100 leading-[160%]"
+          >
+            쫄면의 진가는 매콤새콤한 양념과 탱탱한 면발에서 찾을 수 있지요.
+            풀무원은 이 맛을 더 부담 없이 즐길 수 있도록 튀기지 않고 만든
+            탱탱쫄면을 선보입니다. 밀가루와 감자 전분을 적절히 배합해 탄력이
+            좋고, 입에 넣었을 때는 찰지게 씹히죠. 고추장을 넣어 숙성한 비빔장은
+            자연스럽고 깊은 맛을 냅니다. 간단하게 조리해 마지막 한 가닥까지
+            탱탱한 식감을 즐겨보세요. 취향에 따라 다양한 고명을 올려 드셔도
+            좋아요.
+          </p>
+        </div>
+
+        <!-- karly's Check Point -->
+        <div class="flex flex-col gap-68pxr">
+          <div class="flex items-center gap-4">
+            <div class="flex-grow h-px bg-gray-100"></div>
+            <h3 class="text-heading-xxxl font-bold leading-[140%]">
+              Karly`s Check Point
+            </h3>
+            <div class="flex-grow h-px bg-gray-100"></div>
+          </div>
+          <img
+            src="https://via.placeholder.com/1010x283"
+            alt="karly's Check Point"
+          />
+        </div>
       </section>
 
       <!-- 상세정보 -->
