[🎨Modify]: 디테일 페이지 상품상세
- 가상이미지 기본 구조
- 폰트 다시 적용 rel="preload" => rel="stylesheet"

--- a/src/pages/productDetail/productDetail.html
+++ b/src/pages/productDetail/productDetail.html
@@ -30,7 +30,7 @@
     <!-- <meta property="og:url" content="웹페이지 URL" /> -->
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
-      rel="preload"
+      rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
@@ -202,7 +202,7 @@
                 >
                   <use href="/public/icon/_sprite.svg#Heart"></use>
                 </svg>
-                <p class="sr-only">찜하기</p>
+                <span class="sr-only">찜하기</span>
               </button>
               <button disabled>
                 <svg
@@ -211,7 +211,7 @@
                 >
                   <use href="/public/icon/_sprite.svg#Bell"></use>
                 </svg>
-                <p class="sr-only">재입고 알림 신청</p>
+                <span class="sr-only">재입고 알림 신청</span>
               </button>
               <button
                 class="text-white font-semibold bg-primary flex justify-center items-center rounded h-54pxr w-424pxr text-label-medium"
@@ -285,6 +285,97 @@
       <!-- 상세정보 -->
       <section id="section_details" class="w-[1050px] my-0 mx-auto">
         <h2 class="sr-only">상세정보</h2>
+
+        <img
+          src="https://via.placeholder.com/1050x1066"
+          alt="상품 상세 이미지"
+        />
+
+        <!-- why karly -->
+        <article
+          class="border-t border-t-gray-100 pt-72pxr pb-84pxr flex flex-col gap-35pxr items-center"
+        >
+          <h3 class="text-heading-xl font-bold leading-[140%]">WHY KARLY</h3>
+
+          <div class="flex flex-col">
+            <div class="flex justify-center">
+              <article class="mt-14 w-[315px] flex flex-col gap-8 items-center">
+                <svg class="h-10 w-10" aria-hidden="true">
+                  <use href="/public/icon/_sprite.svg#Committee"></use>
+                </svg>
+                <h4 class="text-primary text-label-large font-semibold">
+                  깐깐한 상품위원회
+                </h4>
+                <p class="text-center">
+                  나와 내 가족이 먹고 쓸 상품을 고르는<br />
+                  마음으로 매주 상품을 직접 먹어보고,<br />
+                  경험해보고 성분, 맛 안정성 등 다각도의<br />
+                  기준을 통과한 상품만을 판매합니다.
+                </p>
+              </article>
+              <article class="mt-14 w-[315px] flex flex-col gap-8 items-center">
+                <svg class="h-10 w-10" aria-hidden="true">
+                  <use href="/public/icon/_sprite.svg#Different"></use>
+                </svg>
+                <h4 class="text-primary text-label-large font-semibold">
+                  차별화된 Karly Only 상품
+                </h4>
+                <p class="text-center">
+                  전국 각지와 해외의 훌륭한 생산자가<br />
+                  믿고 선택하는 파트너, 마켓칼리.<br />
+                  3천여 개가 넘는 칼리 단독 브랜드, 스펙의<br />
+                  Karly Only 상품을 믿고 만나보세요.
+                </p>
+              </article>
+              <article class="mt-14 w-[315px] flex flex-col gap-8 items-center">
+                <svg class="h-10 w-10" aria-hidden="true">
+                  <use href="/public/icon/_sprite.svg#Delivery"></use>
+                </svg>
+                <h4 class="text-primary text-label-large font-semibold">
+                  신선한 풀콜드체인 배송
+                </h4>
+                <p class="text-center">
+                  온라인 업계 최초로 산지에서 문 앞까지<br />
+                  상온, 냉장, 냉동 상품을 분리 포장 후<br />
+                  최적의 온도를 유지하는 냉장 배송 시스템,<br />
+                  풀콜드체인으로 상품을 신선하게 전해드립니다.
+                </p>
+              </article>
+            </div>
+            <div class="flex justify-center gap-4">
+              <article class="mt-14 w-[315px] flex flex-col gap-8 items-center">
+                <svg class="h-10 w-10" aria-hidden="true">
+                  <use href="/public/icon/_sprite.svg#Price"></use>
+                </svg>
+                <h4 class="text-primary text-label-large font-semibold">
+                  고객, 생산자를 위한 최선의 가격
+                </h4>
+                <p class="text-center">
+                  매주 대형 마트와 주요 온라인 마트의 가격<br />
+                  변동 상황을 확인해 신선식품은 품질을<br />
+                  타협하지 않는 선에서 최선의 가격으로,<br />
+                  가공식품은 언제나 합리적인 가격으로<br />
+                  정기 조정합니다.
+                </p>
+              </article>
+              <article class="mt-14 w-[315px] flex flex-col gap-8 items-center">
+                <svg class="h-10 w-10" aria-hidden="true">
+                  <use href="/public/icon/_sprite.svg#Enviroment"></use>
+                </svg>
+                <h4 class="text-primary text-label-large font-semibold">
+                  환경을 생각하는 지속 가능한 유통
+                </h4>
+                <p class="text-center">
+                  친환경 포장재부터 생산자가 상품에만<br />
+                  집중할 수 있는 직매입 유통구조까지,<br />
+                  지속 가능한 유통을 고민하며 컬리를 있게<br />
+                  하는 모든 환경(생산자,커뮤니티,직원)이<br />
+                  더 나아질 수 있도록 노력합니다.
+                </p>
+              </article>
+            </div>
+          </div>
+        </article>
       </section>
 
       <!-- 후기 -->
